--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,12 @@
 name = "tonjson"
 version = "0.1.0"
 edition = "2021"
+authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[build-dependencies]
+cmake = "0.1.48"
 
 [dependencies]
+libc = "0.2.125"
+serde = "1.0.136"
+serde_json = "1.0.79"
