--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,9 @@ tokio = { version = "1.18.2", features = ["rt-multi-thread", "sync", "macros", "
 uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }
 futures = "0.3.21"
 async-stream = "0.3.3"
+jsonrpc-http-server = "17.1"
+jsonrpc-derive = "17.1"
+jsonrpc-core = "17.1"
+lazy_static = "1.4.0"
+base64 = "0.13.0"
+hex = "0.4.3"
