--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ tonlibjson-rs = { path = "../tonlibjson-rs" }
 anyhow = "1.0.57"
 serde = { version = "1.0.136", features = ["serde_derive"] }
 serde_json = "1.0.79"
-tokio = { version = "1.18.2", features = ["rt-multi-thread", "sync", "macros", "time"] }
+tokio = { version = "1.18.2", features = ["rt-multi-thread", "sync", "macros", "time", "rt"] }
+tokio-stream = "0.1.8"
 uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }
 futures = "0.3.21"
 async-stream = "0.3.3"
@@ -22,6 +23,6 @@ jsonrpc-core = "17.1"
 lazy_static = "1.4.0"
 base64 = "0.13.0"
 hex = "0.4.3"
-
+dashmap = "5.3.3"
 [profile.release]
 lto = "fat"
