--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 cmake = "0.1.48"
 
 [dependencies]
+axum = "0.4.4"
 tonlibjson-rs = { path = "../tonlibjson-rs" }
 anyhow = "1.0.57"
 serde = { version = "1.0.136", features = ["serde_derive"] }
@@ -17,12 +18,9 @@ tokio-stream = "0.1.8"
 uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }
 futures = "0.3.21"
 async-stream = "0.3.3"
-jsonrpc-http-server = "17.1"
-jsonrpc-derive = "17.1"
-jsonrpc-core = "17.1"
-lazy_static = "1.4.0"
 base64 = "0.13.0"
 hex = "0.4.3"
 dashmap = "5.3.3"
+
 [profile.release]
 lto = "fat"
