--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,9 @@
-[package]
-name = "tonjsonrpc"
-version = "0.1.0"
-edition = "2021"
-authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
-
-[build-dependencies]
-cmake = "0.1.48"
-
-[dependencies]
-axum = "0.4.4"
-tonlibjson-rs = { path = "../tonlibjson-rs" }
-anyhow = "1.0.57"
-serde = { version = "1.0.136", features = ["serde_derive"] }
-serde_json = "1.0.79"
-tokio = { version = "1.18.2", features = ["rt-multi-thread", "sync", "macros", "time", "rt"] }
-tokio-stream = "0.1.8"
-uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }
-futures = "0.3.21"
-base64 = "0.13.0"
-hex = "0.4.3"
-dashmap = "5.3.3"
+[workspace]
+members = [
+    "tonlibjson-rs",
+    "tonlibjson-tokio",
+    "tonlibjson-jsonrpc"
+]
 
 [profile.release]
 lto = "fat"
