--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 members = [
     "tonlibjson-rs",
     "tonlibjson-tokio",
-    "tonlibjson-jsonrpc"
+    "tonlibjson-jsonrpc",
+    "tonlibjson-experiment"
 ]
 
 [profile.release]
