--- a/tonlibjson-experiment/Cargo.toml
+++ b/tonlibjson-experiment/Cargo.toml
@@ -12,3 +12,5 @@ anyhow = "1.0.57"
 futures = "0.3.21"
 tonlibjson-tokio = { path = "../tonlibjson-tokio" }
 serde_json = "1.0.81"
+base64 = "0.13"
+hex = "0.4.3"
