--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           submodules: recursive
 
-      - run: sudo apt update && sudo apt install --yes libc++-dev
+      - run: sudo apt update && sudo apt install --yes libc++-dev libc++abi-dev
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af #@v1
