--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -29,15 +29,27 @@ jobs:
         with:
           submodules: recursive
 
-      - run: sudo apt update && sudo apt install --yes libc++-dev-11 libc++abi-dev-11
+    - name: Restore llvm repos
+      run: |
+        wget https://apt.llvm.org/llvm.sh
+        chmod +x llvm.sh
+        sudo ./llvm.sh 14
 
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af #@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          components: clippy
-          override: true
+    - name: Install libc++-14
+      run: sudo apt-get install -y libc++-14-dev libc++abi-14-dev
+
+    - name: Switch clang version to 14
+      run: |
+        sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-14 101
+        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-14 101
+
+    - name: Install Rust toolchain
+      uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af #@v1
+      with:
+        profile: minimal
+        toolchain: stable
+        components: clippy
+        override: true
 
       - name: Install required cargo
         run: cargo install clippy-sarif sarif-fmt
