--- a/tonlibjson-experiment/Cargo.toml
+++ b/tonlibjson-experiment/Cargo.toml
@@ -14,3 +14,5 @@ tonlibjson-tokio = { path = "../tonlibjson-tokio" }
 serde_json = "1.0.82"
 base64 = "0.13"
 hex = "0.4.3"
+tracing = "0.1"
+tracing-subscriber = "0.3"
