--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,14 +6,14 @@
 version: 2
 updates:
   - package-ecosystem: "cargo"
-    directory: "/" # Location of package manifests
+    directory: "/"
     schedule:
       interval: "daily"
-    reviewers:
-      - "akostylev0"
   - package-ecosystem: gitsubmodule
     directory: "/"
     schedule:
       interval: "daily"
-    reviewers:
-      - "akostylev0"
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: "daily"
