--- a/tonlibjson-tokio/Cargo.toml
+++ b/tonlibjson-tokio/Cargo.toml
@@ -16,3 +16,4 @@ uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
 tower = { version = "0.4.13", features = ["full"] }
 pin-project = "1.0.11"
 tracing = "0.1"
+reqwest = { version = "0.11" }
