--- a/tonlibjson-tokio/Cargo.toml
+++ b/tonlibjson-tokio/Cargo.toml
@@ -17,3 +17,4 @@ tower = { version = "0.4.13", features = ["full"] }
 pin-project = "1.0.11"
 tracing = "0.1"
 reqwest = { version = "0.11" }
+tokio-stream = "0.1.9"
