--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -51,6 +51,8 @@ jobs:
           components: clippy
           override: true
 
+      - uses: Swatinem/rust-cache@v2
+
       - name: Install required cargo
         run: cargo install clippy-sarif sarif-fmt
 
