--- a/tonlibjson-tokio/Cargo.toml
+++ b/tonlibjson-tokio/Cargo.toml
@@ -18,3 +18,5 @@ pin-project = "1.0.12"
 tracing = "0.1"
 reqwest = { version = "0.11" }
 tokio-stream = "0.1.9"
+config = "0.13.1"
+url = { version = "2.2.2", features = ["serde"] }
