--- a/tonlibjson-tokio/Cargo.toml
+++ b/tonlibjson-tokio/Cargo.toml
@@ -18,5 +18,5 @@ pin-project = "1.0.12"
 tracing = "0.1"
 reqwest = { version = "0.11" }
 tokio-stream = "0.1.9"
-config = "0.13.1"
+config = { version = "0.13.1", default-features = false }
 url = { version = "2.2.2", features = ["serde"] }
