--- a/tonlibjson-tokio/Cargo.toml
+++ b/tonlibjson-tokio/Cargo.toml
@@ -16,7 +16,7 @@ uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
 tower = { version = "0.4.13", features = ["full"] }
 pin-project = "1.0.12"
 tracing = "0.1"
-reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
+reqwest = { version = "0.11", features = ["rustls-tls", "trust-dns"], default-features = false }
 tokio-stream = "0.1.9"
 config = { version = "0.13.1", default-features = false }
 url = { version = "2.2.2", features = ["serde"] }
