--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "tonlibjson-rs",
     "tonlibjson-tokio",
+    "tonlibjson-tvm",
     "tonlibjson-jsonrpc",
     "tonlibjson-experiment"
 ]
