--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -29,6 +29,20 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Restore llvm repos
+        run: |
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 15
+
+      - name: Install libc++-15
+        run: sudo apt-get install -y libc++-15-dev libc++abi-15-dev
+
+      - name: Switch clang version to 15
+        run: |
+          sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-15 101
+          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-15 101
+
       - uses: actions/cache@v3
         with:
           path: |
