--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,8 @@ members = [
     "tonlibjson-jsonrpc",
     "tonlibjson-experiment"
 ]
+
+[workspace.dependencies]
+anyhow = "1.0.66"
+tower = { version = "0.4.13", features = ["full"] }
+tokio = { version = "1.21.2", features = ["full"] }
