--- a/tonlibjson-experiment/Cargo.toml
+++ b/tonlibjson-experiment/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tower = { version = "0.4.13", features = ["full"] }
-tokio = { version = "1.20.1", features = ["full"] }
-anyhow = "1.0.63"
+tower = { workspace = true }
+tokio = { workspace = true }
+anyhow = { workspace = true }
 futures = "0.3.24"
 tonlibjson-tokio = { path = "../tonlibjson-tokio" }
 serde_json = "1.0.85"
