--- a/tonlibjson-tokio/Cargo.toml
+++ b/tonlibjson-tokio/Cargo.toml
@@ -6,14 +6,14 @@ authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 
 [dependencies]
 tonlibjson-rs = { path = "../tonlibjson-rs" }
-anyhow = "1.0.63"
+tower = { workspace = true }
+tokio = { workspace = true }
+anyhow = { workspace = true }
 serde = { version = "1.0.144", features = ["serde_derive"] }
 serde_json = "1.0.85"
-tokio = { version = "1.20.1", features = ["rt-multi-thread", "sync", "macros", "time", "rt"] }
 futures = "0.3.24"
 dashmap = "5.4.0"
 uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
-tower = { version = "0.4.13", features = ["full"] }
 pin-project = "1.0.12"
 tracing = "0.1"
 reqwest = { version = "0.11", features = ["rustls-tls", "trust-dns"], default-features = false }
