--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ members = [
 anyhow = "1.0.66"
 tower = { version = "0.4.13", features = ["full"] }
 tokio = { version = "1.21.2", features = ["full"] }
+futures = "0.3.24"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+serde_json = "1.0.85"
+serde = { version = "1.0.144", features = ["serde_derive"] }
+base64 = "0.13"
+hex = "0.4.3"
