--- a/tonlibjson-experiment/Cargo.toml
+++ b/tonlibjson-experiment/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tonlibjson-tokio = { path = "../tonlibjson-tokio" }
 tower = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
-futures = "0.3.24"
-tonlibjson-tokio = { path = "../tonlibjson-tokio" }
-serde_json = "1.0.85"
-base64 = "0.13"
-hex = "0.4.3"
-tracing = "0.1"
-tracing-subscriber = "0.3"
+futures = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+serde_json = { workspace = true }
+base64 = { workspace = true }
+hex = { workspace = true }
