--- a/tonlibjson-jsonrpc/Cargo.toml
+++ b/tonlibjson-jsonrpc/Cargo.toml
@@ -8,15 +8,15 @@ authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 cmake = "0.1.48"
 
 [dependencies]
-axum = "0.5.15"
+tonlibjson-tokio = { path = "../tonlibjson-tokio" }
 tokio = { workspace = true }
 anyhow = { workspace = true }
+futures = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+base64 = { workspace = true }
+hex = { workspace = true }
 tokio-stream = "0.1.9"
-futures = "0.3.24"
-tonlibjson-tokio = { path = "../tonlibjson-tokio" }
-serde = { version = "1.0.144", features = ["serde_derive"] }
-serde_json = "1.0.85"
-base64 = "0.13.0"
-hex = "0.4.3"
-tracing = "0.1"
-tracing-subscriber = "0.3"
+axum = "0.5.17"
