--- a/tonlibjson-tokio/Cargo.toml
+++ b/tonlibjson-tokio/Cargo.toml
@@ -9,14 +9,14 @@ tonlibjson-rs = { path = "../tonlibjson-rs" }
 tower = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
-serde = { version = "1.0.144", features = ["serde_derive"] }
-serde_json = "1.0.85"
-futures = "0.3.24"
+futures = { workspace = true }
+tracing = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 dashmap = "5.4.0"
 uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
 pin-project = "1.0.12"
-tracing = "0.1"
 reqwest = { version = "0.11", features = ["rustls-tls", "trust-dns"], default-features = false }
 tokio-stream = "0.1.9"
 config = { version = "0.13.1", default-features = false }
-url = { version = "2.2.2", features = ["serde"] }
+url = { version = "2.3.0", features = ["serde"] }
