--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,3 +3,6 @@ rustflags = "-Clinker-plugin-lto -Clinker=clang -Clink-arg=-fuse-ld=lld -Ctarget
 
 [target.x86_64-apple-darwin]
 rustflags = "-Clinker=clang"
+
+[build]
+target = "x86_64-unknown-linux-gnu"
