--- a/tonlibjson-tokio/Cargo.toml
+++ b/tonlibjson-tokio/Cargo.toml
@@ -14,7 +14,7 @@ tracing = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 dashmap = "5.4.0"
-uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
+uuid = { version = "1.2.1", features = ["v4", "fast-rng", "serde"] }
 pin-project = "1.0.12"
 reqwest = { version = "0.11", features = ["rustls-tls", "trust-dns"], default-features = false }
 tokio-stream = "0.1.9"
