--- a/tonlibjson-tokio/Cargo.toml
+++ b/tonlibjson-tokio/Cargo.toml
@@ -13,6 +13,7 @@ futures = { workspace = true }
 tracing = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+async-stream = "0.3.3"
 dashmap = "5.4.0"
 uuid = { version = "1.2.1", features = ["v4", "fast-rng", "serde"] }
 pin-project = "1.0.12"
