--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ tokio = { version = "1.21.2", features = ["full"] }
 futures = "0.3.25"
 tracing = "0.1"
 tracing-subscriber = "0.3"
-serde_json = "1.0.85"
+serde_json = "1.0.87"
 serde = { version = "1.0.147", features = ["serde_derive"] }
 base64 = "0.13.1"
 hex = "0.4.3"
+tokio-stream = "0.1.11"
