--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tonlibjson-tokio"
+name = "tonlibjson-client"
 version = "0.1.0"
 edition = "2021"
 authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
