add ton testnet branch dep and testnet feature

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "tonlibjson-sys/ton"]
 	path = tonlibjson-sys/ton
 	url = https://github.com/ton-blockchain/ton.git
+[submodule "tonlibjson-sys/ton-testnet"]
+	path = tonlibjson-sys/ton-testnet
+	url = https://github.com/ton-blockchain/ton.git
+	branch = testnet
