--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -26,3 +26,6 @@ url = { version = "2.3", features = ["serde"] }
 hex = { workspace = true }
 base64 = { workspace = true }
 tracing-test = { workspace = true }
+
+[features]
+testnet = ["tonlibjson-sys/testnet"]
