--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -7,6 +7,13 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 jobs:
   build-docker-image:
+    strategy:
+      matrix:
+        version:
+          - suffix: ''
+            features: ''
+          - suffix: '-testnet'
+            features: 'testnet'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -30,7 +37,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ matrix.suffix }}
           tags: |
             type=sha
             type=sha,format=long
@@ -45,9 +52,10 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: |
-            type=gha,scope=${{ github.base_ref }}
-            type=gha,scope=${{ github.head_ref }}
-          cache-to: type=gha,mode=max,scope=${{ github.head_ref }}
+            type=gha,scope=${{ github.base_ref }}${{ matrix.suffix }}
+            type=gha,scope=${{ github.head_ref }}${{ matrix.suffix }}
+          cache-to: type=gha,mode=max,scope=${{ github.head_ref }}${{ matrix.suffix }}
           build-args: |
             sha=${{ github.sha }}
             sha_short=${{ env.GITHUB_SHA_SHORT }}
+            features=${{ matrix.features }}
