--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -8,6 +8,13 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 jobs:
   build-docker-image:
+    strategy:
+      matrix:
+        version:
+          - suffix: ''
+            features: ''
+          - suffix: '-testnet'
+            features: 'testnet'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -31,7 +38,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ matrix.version.suffix }}
           tags: |
             type=sha
             type=sha,format=long
@@ -44,8 +51,9 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha,scope=${{ github.ref_name }}
-          cache-to: type=gha,mode=max,scope=${{ github.ref_name }}
+          cache-from: type=gha,scope=${{ github.ref_name }}${{ matrix.version.suffix }}
+          cache-to: type=gha,mode=max,scope=${{ github.ref_name }}${{ matrix.version.suffix }}
           build-args: |
             sha=${{ github.sha }}
             sha_short=${{ env.GITHUB_SHA_SHORT }}
+            features=${{ matrix.version.features }}
