--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -9,7 +9,7 @@ jobs:
   build-docker-image:
     strategy:
       matrix:
-        version:
+        include:
           - suffix: ''
             features: ''
           - suffix: '-testnet'
