--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -10,7 +10,7 @@ jobs:
   build-docker-image:
     strategy:
       matrix:
-        version:
+        include:
           - suffix: ''
             features: ''
           - suffix: '-testnet'
@@ -38,7 +38,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ matrix.version.suffix }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}${{ matrix.suffix }}
           tags: |
             type=sha
             type=sha,format=long
@@ -51,9 +51,9 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha,scope=${{ github.ref_name }}${{ matrix.version.suffix }}
-          cache-to: type=gha,mode=max,scope=${{ github.ref_name }}${{ matrix.version.suffix }}
+          cache-from: type=gha,scope=${{ github.ref_name }}${{ matrix.suffix }}
+          cache-to: type=gha,mode=max,scope=${{ github.ref_name }}${{ matrix.suffix }}
           build-args: |
             sha=${{ github.sha }}
             sha_short=${{ env.GITHUB_SHA_SHORT }}
-            features=${{ matrix.version.features }}
+            FEATURES=${{ matrix.features }}
