--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { workspace = true }
 anyhow = { workspace = true }
 futures = { workspace = true }
 tracing = { workspace = true }
+tracing-subscriber = { workspace = true}
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio-stream = { workspace = true }
