--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -22,6 +22,7 @@ pin-project = "1.0"
 reqwest = { version = "0.11", features = ["rustls-tls", "trust-dns"], default-features = false }
 config = { version = "0.13", default-features = false }
 url = { version = "2.3", features = ["serde"] }
+rand = "0.8"
 
 [dev-dependencies]
 hex = { workspace = true }
