--- a/ton-grpc/Cargo.toml
+++ b/ton-grpc/Cargo.toml
@@ -15,6 +15,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tonic = "0.8"
 tonic-reflection = "0.6"
+tonic-health = "0.8"
 prost = "0.11"
 
 [build-dependencies]
