--- a/.github/workflows/builder-docker-image.yaml
+++ b/.github/workflows/builder-docker-image.yaml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: false
       - uses: docker/setup-buildx-action@v2
       - uses: docker/login-action@v2
         with:
