--- a/.github/workflows/builder-docker-image.yaml
+++ b/.github/workflows/builder-docker-image.yaml
@@ -36,6 +36,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          context: .
           file: builder.Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
