--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -10,6 +10,8 @@ jobs:
   build-docker-image:
     strategy:
       matrix:
+        fail-fast: true
+        max-parallel: 1
         include:
           - suffix: ''
             features: ''
