--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -5,6 +5,9 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   build-docker-image:
     strategy:
@@ -64,4 +67,6 @@ jobs:
             FEATURES=${{ matrix.features }}
             ACTIONS_CACHE_URL=${{ env.ACTIONS_CACHE_URL }}
             ACTIONS_RUNTIME_TOKEN=${{ env.ACTIONS_RUNTIME_TOKEN }}
+            SCCACHE_GHA_CACHE_FROM=${GITHUB_REF##*/}${{ matrix.suffix }},master${{ matrix.suffix }}
+            SCCACHE_GHA_CACHE_TO=${GITHUB_REF##*/}${{ matrix.suffix }}
             SCCACHE_GHA_ENABLED=on
