--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -67,6 +67,6 @@ jobs:
             FEATURES=${{ matrix.features }}
             ACTIONS_CACHE_URL=${{ env.ACTIONS_CACHE_URL }}
             ACTIONS_RUNTIME_TOKEN=${{ env.ACTIONS_RUNTIME_TOKEN }}
-            SCCACHE_GHA_CACHE_FROM=${GITHUB_REF##*/}${{ matrix.suffix }},master${{ matrix.suffix }}
-            SCCACHE_GHA_CACHE_TO=${GITHUB_REF##*/}${{ matrix.suffix }}
+            SCCACHE_GHA_CACHE_FROM=${{ github.ref_name }}${{ matrix.suffix }},master${{ matrix.suffix }}
+            SCCACHE_GHA_CACHE_TO=${{ github.ref_name }}${{ matrix.suffix }}
             SCCACHE_GHA_ENABLED=on
