--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -25,6 +25,8 @@ jobs:
         with:
           submodules: recursive
 
+      - uses: arduino/setup-protoc@v1
+
       - name: Restore llvm repos
         run: |
           wget https://apt.llvm.org/llvm.sh
