--- a/ton-grpc/Cargo.toml
+++ b/ton-grpc/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 
 [dependencies]
 tonlibjson-sys = { path = "../tonlibjson-sys", features = ["tonemulator"] }
+tonlibjson-client = { path = "../tonlibjson-client" }
 tokio = { workspace = true }
 futures = { workspace = true }
 anyhow = { workspace = true }
@@ -13,6 +14,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+base64 = { workspace = true }
 tonic = "0.9"
 tonic-reflection = "0.9"
 tonic-health = "0.9"
