--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ tower = { version = "0.4", features = ["full"] }
 tokio = { version = "1.27", features = ["full"] }
 futures = "0.3"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["serde_derive"] }
 base64 = "0.21"
