--- a/ton-grpc/Cargo.toml
+++ b/ton-grpc/Cargo.toml
@@ -19,6 +19,7 @@ tonic-reflection = "0.9"
 tonic-health = "0.9"
 prost = "0.11"
 either = "1.8"
+derive-new = "0.5.9"
 
 [build-dependencies]
 tonic-build = "0.9"
