--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["serde_derive"] }
 base64 = "0.21"
 hex = "0.4"
-tokio-stream = "0.1"
+tokio-stream = { version = "0.1", features = ["sync"]}
 tracing-test = "0.2.4"
