--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -15,6 +15,8 @@ tracing-subscriber = { workspace = true}
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio-stream = { workspace = true }
+base64 = { workspace = true }
+hex = { workspace = true }
 async-stream = "0.3"
 dashmap = "5.4"
 uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }
@@ -27,8 +29,8 @@ itertools = "0.10"
 derive-new = "0.5.9"
 async-trait = "0.1.68"
 tokio-retry = "0.3"
-base64 = { workspace = true }
-hex = { workspace = true }
+bytes = "1.4"
+crc = "3.0.1"
 
 [dev-dependencies]
 tracing-test = { workspace = true }
