--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -17,8 +17,8 @@ serde_json = { workspace = true }
 tokio-stream = { workspace = true }
 base64 = { workspace = true }
 hex = { workspace = true }
+tokio-tower = "0.6.0"
 async-stream = "0.3"
-dashmap = "5.4"
 uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }
 pin-project = "1.0"
 reqwest = { version = "0.11", features = ["rustls-tls", "trust-dns"], default-features = false }
