--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [target.x86_64-unknown-linux-gnu]
-rustflags = "-Clinker-plugin-lto -Clinker=clang -Clink-arg=-fuse-ld=lld -Ctarget-feature=+crt-static -Clink-arg=-flto"
+rustflags = "-Clinker-plugin-lto -Clinker=clang -Clink-arg=-fuse-ld=lld -Ctarget-feature=+crt-static -Clink-arg=-flto --cfg tokio_unstable"
 
 [target.x86_64-apple-darwin]
 rustflags = "-Clinker=clang"
