--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -31,6 +31,7 @@ async-trait = "0.1.68"
 tokio-retry = "0.3"
 bytes = "1.4"
 crc = "3.0.1"
+pin-project-lite = "0.2"
 
 [dev-dependencies]
 tracing-test = { workspace = true }
