--- a/ton-grpc/Cargo.toml
+++ b/ton-grpc/Cargo.toml
@@ -14,6 +14,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+async-stream = { workspace = true }
 tonic = "0.9"
 tonic-reflection = "0.9"
 tonic-health = "0.9"
