--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -17,7 +17,7 @@ serde_json = { workspace = true }
 tokio-stream = { workspace = true }
 base64 = { workspace = true }
 hex = { workspace = true }
-async-stream = "0.3"
+async-stream = { workspace = true }
 dashmap = "5.4"
 uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }
 pin-project = "1.1"
