--- a/tvm-grpc/Cargo.toml
+++ b/tvm-grpc/Cargo.toml
@@ -1,24 +1,23 @@
 [package]
-name = "ton-grpc"
+name = "tvm-grpc"
 version = "0.1.0"
 edition = "2021"
 authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 
 [dependencies]
-tonlibjson-client = { path = "../tonlibjson-client" }
+tonlibjson-sys = { path = "../tonlibjson-sys", features = ["tonemulator"] }
 tokio = { workspace = true }
 futures = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
+async-stream = { workspace = true }
 tonic = { workspace = true }
 tonic-reflection = { workspace = true }
 tonic-health = { workspace = true }
 prost = { workspace = true }
-either = "1.8"
-derive-new = "0.5.9"
+serde = { workspace = true }
+serde_json = { workspace = true }
 
 [build-dependencies]
 tonic-build = { workspace = true }
