--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
 ]
 
 [workspace.dependencies]
-anyhow = "1.0"
+anyhow = { version = "1.0", features = ["backtrace"]}
 tower = { version = "0.4", features = ["full"] }
 tokio = { version = "1.28", features = ["full"] }
 futures = "0.3"
