--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,6 @@ tonic-reflection = "0.9"
 tonic-health = "0.9"
 tonic-build = "0.9"
 prost = "0.11"
+opentelemetry = { version = "0.19.0", features = ["rt-tokio", "metrics"] }
+opentelemetry-otlp = { version = "0.12.0", features = ["metrics"] }
+tracing-opentelemetry = "0.19.0"
