--- a/ton-grpc/Cargo.toml
+++ b/ton-grpc/Cargo.toml
@@ -24,6 +24,7 @@ prost = { workspace = true }
 opentelemetry = { workspace = true }
 opentelemetry-otlp = { workspace = true }
 tracing-opentelemetry = { workspace = true }
+tower-http = { version = "0.4.0", features = ["trace", "propagate-header"] }
 either = "1.8"
 derive-new = "0.5.9"
 
