--- a/ton-grpc/Cargo.toml
+++ b/ton-grpc/Cargo.toml
@@ -15,6 +15,7 @@ futures = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+tracing-futures = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tonic = { workspace = true }
