--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ hex = "0.4"
 tokio-stream = { version = "0.1", features = ["sync"]}
 tracing-test = "0.2.4"
 async-stream = "0.3.5"
-tonic = "0.9"
+tonic = { version = "0.9", features = ["gzip"] }
 tonic-reflection = "0.9"
 tonic-health = "0.9"
 tonic-build = "0.9"
