--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,14 +1,10 @@
 [target.x86_64-unknown-linux-gnu]
-rustflags = "-Clinker-plugin-lto -Clinker=clang -Clink-arg=-fuse-ld=lld -Ctarget-feature=+crt-static -Clink-arg=-flto"
+linker = "clang"
+rustflags = "-Clink-arg=-fuse-ld=lld -Clinker-plugin-lto"
 
 [target.x86_64-apple-darwin]
-rustflags = "-Clinker=clang"
-
-[build]
-target = "x86_64-unknown-linux-gnu"
-
-[registries.crates-io]
-protocol = "sparse"
+linker = "clang"
 
 [profile.release]
 debug = true
+lto = true
