--- a/tvm-grpc/Cargo.toml
+++ b/tvm-grpc/Cargo.toml
@@ -18,6 +18,7 @@ tonic-health = { workspace = true }
 prost = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+rayon = "1.7"
 
 [build-dependencies]
 tonic-build = { workspace = true }
