--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -8,7 +8,7 @@ jobs:
   rust-clippy-analyze:
     name: Run rust-clippy analyzing
     runs-on:
-      group: "CPUBoundRunner"
+      group: "CPUBound"
     permissions:
       contents: read
       checks: write
