try to use protoc from repo

--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -18,10 +18,8 @@ jobs:
         with:
           submodules: recursive
 
-      - uses: arduino/setup-protoc@v2
-
       - name: Install libc++-16
-        run: sudo apt-get install -y libsecp256k1-dev libsodium-dev
+        run: sudo apt-get install -y libsecp256k1-dev libsodium-dev protobuf-compiler
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
