--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -17,9 +17,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
-
+      - uses: arduino/setup-protoc@v2
       - name: Install deps
-        run: sudo apt-get install -y libsecp256k1-dev libsodium-dev protobuf-compiler
+        run: sudo apt-get install -y libsecp256k1-dev libsodium-dev
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
