--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -1,14 +1,45 @@
 name: Check release build
 on:
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - "master"
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
+  rust-clippy-analyze:
+    name: Run rust-clippy analyzing
+    runs-on:
+      group: "CPUBound"
+    permissions:
+      contents: read
+      checks: write
+      security-events: write
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
+      - uses: arduino/setup-protoc@v2
+
+      - name: Install deps
+        run: sudo apt-get install -y libsecp256k1-dev libsodium-dev
+
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          components: clippy
+          override: true
+
+      - uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features --target x86_64-unknown-linux-gnu
   build-docker-image:
     strategy:
       matrix:
