--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./llvm
+          key: llvm-16
       - name: Install LLVM and Clang
         uses: KyleMayes/install-llvm-action@v1
         with:
