--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -6,11 +6,49 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  BUILDER_IMAGE_NAME: ${{ github.repository }}--builder
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
+  builder:
+    name: Prepare builder image
+    runs-on:
+      group: "CPUBound"
+    permissions:
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.BUILDER_IMAGE_NAME }}
+          tags: |
+            type=sha
+            type=sha,format=long
+            type=ref,event=branch
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          context: .
+          cache-from: type=registry,ref=${{ env.BUILDER_IMAGE_NAME }}:master
+          cache-to: type=inline
+          file: builder.Dockerfile
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
   rust-clippy-analyze:
+    needs:
+      - builder
     name: Run rust-clippy analyzing
     runs-on:
       group: "CPUBound"
