--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -19,7 +19,6 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -35,13 +34,13 @@ jobs:
             type=sha
             type=sha,format=long
             type=ref,event=branch
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           push: true
+          pull: true
           context: .
-          cache-from: type=registry,ref=${{ env.BUILDER_IMAGE_NAME }}:master
-          cache-to: type=inline
           file: builder.Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
