--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -52,7 +52,7 @@ jobs:
     runs-on:
       group: "CPUBound"
     container:
-      ${{ github.repository }}-builder:${{ github.sha }}
+      ${{ github.repository }}-builder:sha-${{ github.sha }}
     steps:
       - run: cargo clippy
   build-docker-image:
