--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -3,6 +3,8 @@ on:
   pull_request:
     branches:
       - "master"
+    paths-ignore:
+      - charts/**
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
