--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - "master"
     paths-ignore:
+      - .github/workflows/charts-*
       - charts/**
 env:
   REGISTRY: ghcr.io
