--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,5 +1,6 @@
 {
   "charts/ton-grpc": "0.1.3",
-  "charts/tvm-grpc": "0.1.1",
-  "ton-grpc": "0.1.0"
+  "charts/tvm-grpc": "0.1.2",
+  "ton-grpc": "0.1.1",
+  "tvm-grpc": "0.1.0"
 }
