--- a/release-please-config.json
+++ b/release-please-config.json
@@ -16,6 +16,12 @@
     },
     "ton-grpc": {
       "release-type": "rust"
+    },
+    "tonlibjson-sys": {
+      "release-type": "rust"
+    },
+    "tonlibjson-client": {
+      "release-type": "rust"
     }
   }
 }
