--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,6 +1,8 @@
 {
   "charts/ton-grpc": "0.1.3",
   "charts/tvm-grpc": "0.1.2",
-  "ton-grpc": "0.1.1",
-  "tvm-grpc": "0.1.0"
+  "ton-grpc": "0.1.2",
+  "tvm-grpc": "0.1.1",
+  "tonlibjson-client": "0.1.0",
+  "tonlibjson-sys": "0.1.0"
 }
