--- a/.github/workflows/tvm-grpc-release.yaml
+++ b/.github/workflows/tvm-grpc-release.yaml
@@ -22,12 +22,11 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-unknown-linux-gnu
-      - run: |
-          LLVM_VERSION_LINE=$(rustc --version --verbose | grep LLVM);
-          echo "LLVM_VERSION=${LLVM_VERSION_LINE#LLVM version: }" >> $GITHUB_ENV;
       - name: Install LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v1
-        with:
-          version: ${{ env.LLVM_VERSION }}
+        run: |
+          wget https://apt.llvm.org/llvm.sh -O /tmp/llvm.sh && chmod +x /tmp/llvm.sh && /tmp/llvm.sh 16 all
+          sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-16 101
+          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-16 101
+
       - run: cargo build -v --bin tvm-grpc --target x86_64-unknown-linux-gnu
       - run: cargo build -v --bin tvm-grpc --target x86_64-unknown-linux-gnu --release
